gen/LaTexParser.java
// Generated from E:/Учёба/Программная инженерия/TeX_grammar/src/main/antlr4/org/example\LaTex.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LaTexParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_DOCUMENTCLASS=1, KW_USEPKG=2, KW_DOCAUTHOR=3, KW_DOCTITLE=4, KW_DOCDATE=5, 
		KW_BEGIN=6, KW_END=7, KW_PARAGRAPH=8, KW_NEWLINE=9, KW_MAKETITLE=10, KW_SECTION=11, 
		KW_SUBSECTION=12, KW_SUBSUBSECTION=13, KW_UNDERLINE=14, KW_EMPH=15, KW_BOLD=16, 
		KW_ITEM=17, KW_HLINE=18, KW_CT_NAME=19, KW_PAPERTYPE=20, KW_DOCUMENT=21, 
		KW_ENV_NAME=22, KW_TODAY=23, KW_SLASH=24, KW_TEXTBACKSLASH=25, KW_LDOTS=26, 
		KW_CELSIUS=27, KW_EURO=28, KW_GREEK_CGAMMA=29, KW_GREEK_CDELTA=30, KW_GREEK_CTHETA=31, 
		KW_GREEK_CLAMBDA=32, KW_GREEK_CPI=33, KW_GREEK_CSIGMA=34, KW_GREEK_CPHI=35, 
		KW_GREEK_CPSI=36, KW_GREEK_COMEGA=37, KW_GREEK_ALFA=38, KW_GREEK_BETA=39, 
		KW_GREEK_GAMMA=40, KW_GREEK_DELTA=41, KW_GREEK_EPSILON=42, KW_GREEK_ETA=43, 
		KW_GREEK_THETA=44, KW_GREEK_IOTA=45, KW_GREEK_KAPPA=46, KW_GREEK_LAMBDA=47, 
		KW_GREEK_MU=48, KW_GREEK_NU=49, KW_GREEK_XI=50, KW_GREEK_PI=51, KW_GREEK_RHO=52, 
		KW_GREEK_SIGMA=53, KW_GREEK_TAU=54, KW_GREEK_UPSILON=55, KW_GREEK_PHI=56, 
		KW_GREEK_CHI=57, KW_GREEK_PSI=58, KW_GREEK_OMEGA=59, KW_TEXTHEIGHT=60, 
		LSB=61, RSB=62, LCB=63, RCB=64, NEWCELL=65, NEWROW=66, COMMA=67, HYPHEN=68, 
		ENDASH=69, EMDASH=70, OQM=71, CQM=72, HASH=73, DOLAR=74, PERCENT=75, CARET=76, 
		AMPERSAND=77, UNDERSCORE=78, CH_LCB=79, CH_RCB=80, TILDE=81, LINE_COMMENT=82, 
		WS=83, FONTSIZE=84, QUOTE=85, STRING=86, CLASSOPT=87, CLASSARG=88, DOCARG=89, 
		ENVARG=90, OPT=91, ARG=92;
	public static final int
		RULE_document = 0, RULE_preamble = 1, RULE_docclass = 2, RULE_classopt = 3, 
		RULE_usepkg = 4, RULE_arg = 5, RULE_opt = 6, RULE_docinfo = 7, RULE_authorinfo = 8, 
		RULE_titleinfo = 9, RULE_dateinfo = 10, RULE_body = 11, RULE_begindoc = 12, 
		RULE_enddoc = 13, RULE_content = 14, RULE_anything = 15, RULE_inserttitle = 16, 
		RULE_text = 17, RULE_string = 18, RULE_expr = 19, RULE_command = 20, RULE_underline = 21, 
		RULE_emph = 22, RULE_bold = 23, RULE_greek = 24, RULE_environment = 25, 
		RULE_envcontent = 26, RULE_beginenv = 27, RULE_endenv = 28, RULE_item = 29, 
		RULE_table = 30, RULE_row = 31, RULE_cell = 32, RULE_quote = 33, RULE_specialchar = 34, 
		RULE_section = 35, RULE_subsection = 36, RULE_subsubsection = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "preamble", "docclass", "classopt", "usepkg", "arg", "opt", 
			"docinfo", "authorinfo", "titleinfo", "dateinfo", "body", "begindoc", 
			"enddoc", "content", "anything", "inserttitle", "text", "string", "expr", 
			"command", "underline", "emph", "bold", "greek", "environment", "envcontent", 
			"beginenv", "endenv", "item", "table", "row", "cell", "quote", "specialchar", 
			"section", "subsection", "subsubsection"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\\documentclass'", "'\\usepackage'", "'\\author'", "'\\title'", 
			"'\\date'", "'\\begin'", "'\\end'", "'\\par'", "'\\newline'", "'\\maketitle'", 
			"'\\section'", "'\\subsection'", "'\\subsubsection'", "'\\underline'", 
			"'\\emph'", "'\\textbf'", "'\\item'", "'\\hline'", "'article'", "'a4paper'", 
			"'document'", null, "'\\today{}'", "'\\slash{}'", "'\\textbackslash{}'", 
			"'\\ldots{}'", "'\\textcelsius{}'", "'\\texteuro{}'", "'\\textGamma{}'", 
			"'\\textDelta{}'", "'\\textTheta{}'", "'\\textLambda{}'", "'\\textPi{}'", 
			"'\\textSigma{}'", "'\\textPhi{}'", "'\\textPsi{}'", "'\\textOmega{}'", 
			"'\\textalpha{}'", "'\\textbeta{}'", "'\\textgamma{}'", "'\\textdelta{}'", 
			"'\\textepsilon{}'", "'\\texteta{}'", "'\\texttheta{}'", "'\\textiota{}'", 
			"'\\textkappa{}'", "'\\textlambda{}'", "'\\textmugreek{}'", "'\\textnu{}'", 
			"'\\textxi{}'", "'\\textpi{}'", "'\\textrho{}'", "'\\textsigma{}'", "'\\texttau{}'", 
			"'\\textupsilon{}'", "'\\textphi{}'", "'\\textchi{}'", "'\\textpsi{}'", 
			"'\\textomega{}'", "'\\textheight'", "'['", "']'", "'{'", "'}'", "'&'", 
			"'\\\\'", "','", "'-'", "'--'", "'---'", "'``'", "''''", "'\\#'", "'\\$'", 
			"'\\%'", "'\\^{}'", "'\\&'", "'\\_'", "'\\{'", "'\\}'", "'\\~{}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KW_DOCUMENTCLASS", "KW_USEPKG", "KW_DOCAUTHOR", "KW_DOCTITLE", 
			"KW_DOCDATE", "KW_BEGIN", "KW_END", "KW_PARAGRAPH", "KW_NEWLINE", "KW_MAKETITLE", 
			"KW_SECTION", "KW_SUBSECTION", "KW_SUBSUBSECTION", "KW_UNDERLINE", "KW_EMPH", 
			"KW_BOLD", "KW_ITEM", "KW_HLINE", "KW_CT_NAME", "KW_PAPERTYPE", "KW_DOCUMENT", 
			"KW_ENV_NAME", "KW_TODAY", "KW_SLASH", "KW_TEXTBACKSLASH", "KW_LDOTS", 
			"KW_CELSIUS", "KW_EURO", "KW_GREEK_CGAMMA", "KW_GREEK_CDELTA", "KW_GREEK_CTHETA", 
			"KW_GREEK_CLAMBDA", "KW_GREEK_CPI", "KW_GREEK_CSIGMA", "KW_GREEK_CPHI", 
			"KW_GREEK_CPSI", "KW_GREEK_COMEGA", "KW_GREEK_ALFA", "KW_GREEK_BETA", 
			"KW_GREEK_GAMMA", "KW_GREEK_DELTA", "KW_GREEK_EPSILON", "KW_GREEK_ETA", 
			"KW_GREEK_THETA", "KW_GREEK_IOTA", "KW_GREEK_KAPPA", "KW_GREEK_LAMBDA", 
			"KW_GREEK_MU", "KW_GREEK_NU", "KW_GREEK_XI", "KW_GREEK_PI", "KW_GREEK_RHO", 
			"KW_GREEK_SIGMA", "KW_GREEK_TAU", "KW_GREEK_UPSILON", "KW_GREEK_PHI", 
			"KW_GREEK_CHI", "KW_GREEK_PSI", "KW_GREEK_OMEGA", "KW_TEXTHEIGHT", "LSB", 
			"RSB", "LCB", "RCB", "NEWCELL", "NEWROW", "COMMA", "HYPHEN", "ENDASH", 
			"EMDASH", "OQM", "CQM", "HASH", "DOLAR", "PERCENT", "CARET", "AMPERSAND", 
			"UNDERSCORE", "CH_LCB", "CH_RCB", "TILDE", "LINE_COMMENT", "WS", "FONTSIZE", 
			"QUOTE", "STRING", "CLASSOPT", "CLASSARG", "DOCARG", "ENVARG", "OPT", 
			"ARG"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LaTex.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LaTexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class DocumentContext extends ParserRuleContext {
		public PreambleContext preamble() {
			return getRuleContext(PreambleContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTexVisitor ) return ((LaTexVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			preamble();
			setState(77);
			body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreambleContext extends ParserRuleContext {
		public DocclassContext docclass() {
			return getRuleContext(DocclassContext.class,0);
		}
		public List<UsepkgContext> usepkg() {
			return getRuleContexts(UsepkgContext.class);
		}
		public UsepkgContext usepkg(int i) {
			return getRuleContext(UsepkgContext.class,i);
		}
		public List<DocinfoContext> docinfo() {
			return getRuleContexts(DocinfoContext.class);
		}
		public DocinfoContext docinfo(int i) {
			return getRuleContext(DocinfoContext.class,i);
		}
		public PreambleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preamble; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).enterPreamble(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).exitPreamble(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTexVisitor ) return ((LaTexVisitor<? extends T>)visitor).visitPreamble(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreambleContext preamble() throws RecognitionException {
		PreambleContext _localctx = new PreambleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_preamble);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			docclass();
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KW_USEPKG) {
				{
				{
				setState(80);
				usepkg();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(86);
				docinfo();
				}
				break;
			}
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(89);
				docinfo();
				}
				break;
			}
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_DOCAUTHOR) | (1L << KW_DOCTITLE) | (1L << KW_DOCDATE))) != 0)) {
				{
				setState(92);
				docinfo();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocclassContext extends ParserRuleContext {
		public TerminalNode KW_DOCUMENTCLASS() { return getToken(LaTexParser.KW_DOCUMENTCLASS, 0); }
		public TerminalNode CLASSARG() { return getToken(LaTexParser.CLASSARG, 0); }
		public ClassoptContext classopt() {
			return getRuleContext(ClassoptContext.class,0);
		}
		public DocclassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_docclass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).enterDocclass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).exitDocclass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTexVisitor ) return ((LaTexVisitor<? extends T>)visitor).visitDocclass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocclassContext docclass() throws RecognitionException {
		DocclassContext _localctx = new DocclassContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_docclass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(KW_DOCUMENTCLASS);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CLASSOPT) {
				{
				setState(96);
				classopt();
				}
			}

			setState(99);
			match(CLASSARG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassoptContext extends ParserRuleContext {
		public TerminalNode CLASSOPT() { return getToken(LaTexParser.CLASSOPT, 0); }
		public ClassoptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classopt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).enterClassopt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).exitClassopt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTexVisitor ) return ((LaTexVisitor<? extends T>)visitor).visitClassopt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassoptContext classopt() throws RecognitionException {
		ClassoptContext _localctx = new ClassoptContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classopt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(CLASSOPT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsepkgContext extends ParserRuleContext {
		public TerminalNode KW_USEPKG() { return getToken(LaTexParser.KW_USEPKG, 0); }
		public ArgContext arg() {
			return getRuleContext(ArgContext.class,0);
		}
		public OptContext opt() {
			return getRuleContext(OptContext.class,0);
		}
		public UsepkgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usepkg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).enterUsepkg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).exitUsepkg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTexVisitor ) return ((LaTexVisitor<? extends T>)visitor).visitUsepkg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UsepkgContext usepkg() throws RecognitionException {
		UsepkgContext _localctx = new UsepkgContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_usepkg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(KW_USEPKG);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPT) {
				{
				setState(104);
				opt();
				}
			}

			setState(107);
			arg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgContext extends ParserRuleContext {
		public TerminalNode ARG() { return getToken(LaTexParser.ARG, 0); }
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).enterArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).exitArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTexVisitor ) return ((LaTexVisitor<? extends T>)visitor).visitArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(ARG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptContext extends ParserRuleContext {
		public TerminalNode OPT() { return getToken(LaTexParser.OPT, 0); }
		public OptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).enterOpt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).exitOpt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTexVisitor ) return ((LaTexVisitor<? extends T>)visitor).visitOpt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptContext opt() throws RecognitionException {
		OptContext _localctx = new OptContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_opt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(OPT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocinfoContext extends ParserRuleContext {
		public AuthorinfoContext authorinfo() {
			return getRuleContext(AuthorinfoContext.class,0);
		}
		public TitleinfoContext titleinfo() {
			return getRuleContext(TitleinfoContext.class,0);
		}
		public DateinfoContext dateinfo() {
			return getRuleContext(DateinfoContext.class,0);
		}
		public DocinfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_docinfo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).enterDocinfo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).exitDocinfo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTexVisitor ) return ((LaTexVisitor<? extends T>)visitor).visitDocinfo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocinfoContext docinfo() throws RecognitionException {
		DocinfoContext _localctx = new DocinfoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_docinfo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_DOCAUTHOR:
				{
				setState(113);
				authorinfo();
				}
				break;
			case KW_DOCTITLE:
				{
				setState(114);
				titleinfo();
				}
				break;
			case KW_DOCDATE:
				{
				setState(115);
				dateinfo();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AuthorinfoContext extends ParserRuleContext {
		public TerminalNode KW_DOCAUTHOR() { return getToken(LaTexParser.KW_DOCAUTHOR, 0); }
		public ArgContext arg() {
			return getRuleContext(ArgContext.class,0);
		}
		public AuthorinfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_authorinfo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).enterAuthorinfo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTexListener ) ((LaTexListener)listener).exitAuthorinfo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTexVisitor ) return ((LaTexVisitor<? extends T>)visitor).visitAuthorinfo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AuthorinfoContext authorinfo() throws RecognitionException {
		AuthorinfoContext _localctx = new AuthorinfoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_authorinfo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(KW_DOCAUTHOR);
			setState(119);
			arg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
